# SimpleRestaurantApi

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: client.rs  main.rs
client/test/: client_test.rs
docs/: database.wsd
server/: Cargo.toml
server/docker/: Dockerfile  SimpleRestaurantApiDBDemo.sql  docker.txt
server/src/: SimpleRestaurantApiDBDemo.sql  data_models.rs  main.rs  server.rs  storage.rs
src/: SimpleRestaurantApiDB.sql  server.rs  storage.rs
src/server/: tcp_server.rs
src/server/database/: SimpleRestaurantApiDB.sql
src/struct/: item.rs  order.rs  restaurant.rs  waiter.rs
