[package]
name = "simple_restaurant_api_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
gluesql = "0.11"
sqlite = "0.26.0"
tokio = { version = "1.18.2", features = ["full"] }
async-trait = "0.1.53"
