[package]
name = "simple_restaurant_api_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tokio = { version = "1.18.2", features = ["full"] }
tokio-postgres = { version = "0.7.6", features = ["with-chrono-0_4"] }
bb8 = "0.8.0"
bb8-postgres = "0.8.0"
async-trait = "0.1.53"
hyper = { version = "0.14.18", features = ["full"] }
time = "0.2.0"
chrono = "0.4.19"